@@ -4,6 +4,10 @@
 
 --------------------------------------------------------------------------
   v.3.4-Beta2 
+	- Fixed print_tags.inc file to catalog matching, now fuzzy like it
+		should be
+	- Fixed bug where file pattern would be ignored if there were no
+		tags in file
 	- Replaced " " with "\s" on Pattern Match Logic
 	- Removed extra space on default Last.FM username/password
 	- Fixed LastFM plugin username and password checking to not even try
